fix collect lista topTem